tests/reject/errorAvocadoNoErr.emojic
🐇 🐟 🍇
  🐇❗️💚 🍇
  🍉
🍉

🏁 🍇
  🥑 💚🐇🐟❗️ 🍇

  🍉
  🙅 error 🍇
    😀 🍪🔤An error occured: 🔤 💬error❗️ 🍪 ❗️
  🍉
🍉
